# shizuno

./: Cargo.toml
src/: config.rs  cursor.rs  drawing.rs  input_handler.rs  lib.rs  main.rs  output_map.rs  render.rs  shell.rs  state.rs  udev.rs  util.rs  window_map.rs  xwayland.rs
src/window_map/: layer_map.rs
src/xwayland/: x11rb_event_source.rs
