[package]
name = "wm"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["fps_ticker"]

[dependencies]
slog = { version = "2.7.0", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
slog-term = "2.8.1"
slog-async = "2.7.0"
sugars = "3.0.1"
either = "1.6.1"
xcursor = "0.3.4"
image = "0.24.0"
fps_ticker = { version = "1.0.0", optional = true }
enum_dispatch = "0.3.8"
once_cell = "1.9.0"
thiserror = "1.0.30"
x11rb = { version = "0.9.0", default-features = false, features = ["composite"] }
xkbcommon = "0.4.0"
rand = "0.8.5"
bitflags = "1.3.2"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "76787fb7df1ae9e872cc3bf9a665278116fb9a94"
default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_logind",
    "backend_udev",
    "renderer_gl",
    "use_system_lib",
    "wayland_frontend",
    "x11rb_event_source",
    "xwayland",
]
